<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/baseline_article"
        android:title="@string/article"/>

    <item
        android:id="@+id/navigation_scan"
        android:enabled="false"
        android:checkable="false"
        android:title=""/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_dashboard"
        android:title="@string/dashboard"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_profile"
        android:title="@string/profile"/>
</menu>