<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.forgotpassword.ForgotActivity"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/iv_logo_forgot"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logout_logo"
        android:src="@drawable/logo_fatrack"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/title_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:textColor="?attr/font_color"
        android:textSize="40sp"
        android:textStyle="bold"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/desc_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_forgot"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="18sp"
        android:textColor="?attr/font_color"
        android:alpha="0"
        tools:alpha="100"/>

    <com.example.fattrack.view.custom.EmailCustom
        android:id="@+id/email_forgot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="Email"
        android:background="@drawable/rounded_border_inline"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_margin="30dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/baseline_alternate_email_24"
        android:textColor="?attr/font_color"
        android:drawablePadding="10dp"
        android:alpha="0"
        tools:alpha="100"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="60dp"
        android:alpha="0"
        tools:alpha="100"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Error"
        android:text="@string/btn_cancel"
        android:textColor="@android:color/white"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="0"
        tools:alpha="100"/>

</LinearLayout>