<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Header background -->
        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?attr/colorPrimary" />

        <!-- Profile Image -->
        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="-70dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/circle_background"
            android:scaleType="centerCrop"
            android:elevation="4dp" />

        <!-- Name and Email -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_name"
            android:textSize="18sp"
            android:textColor="?attr/font_color"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_email"
            android:textSize="14sp"
            android:textColor="@color/gray" />

        <!-- Edit Profile Button -->
        <Button
            android:id="@+id/btn_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="@string/edit_profile"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="@color/white" />

        <!-- Dark Mode Switch -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:padding="12dp"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/card_variant">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/dark_mode_logo"
                    android:backgroundTint="?attr/font_color"
                    android:src="@drawable/ic_dark_mode" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:text="@string/dark_mode"
                    android:textColor="?attr/font_color"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/theme_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/gray"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

        <!-- Push Notification Switch -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/card_variant">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/notification_logo"
                android:backgroundTint="?attr/font_color"
                android:src="@drawable/ic_notifications" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:textColor="?attr/font_color"
                android:text="@string/push_notification"
                android:textSize="16sp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/gray"
                android:checked="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <!-- Reset Password -->
        <LinearLayout
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical"
            android:background="@drawable/card_variant"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/reset_logo"
                android:backgroundTint="?attr/font_color"
                android:src="@drawable/ic_reset_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="?attr/font_color"
                android:text="@string/reset_password"
                android:textSize="16sp" />
        </LinearLayout>


        <!-- Logout Button -->
        <LinearLayout
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="horizontal"
            android:padding="12dp"
            android:gravity="center_vertical"
            android:background="@drawable/card_variant"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/logout_logo"
                android:backgroundTint="@color/Error"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/log_out"
                android:textSize="16sp"
                android:textColor="@color/Error" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />


    </LinearLayout>
</ScrollView>
