<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Header background -->
        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="?attr/colorPrimary" />

        <!-- Profile Picture -->
        <RelativeLayout
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:layout_marginTop="-75dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/circle_background"
                android:contentDescription="@string/profile" />

            <ImageView
                android:id="@+id/edit_profile_image"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:src="@drawable/ic_edit_square"
                android:padding="6dp"
                android:contentDescription="@string/edit_profile_picture" />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/email_label"
            android:textSize="18sp"
            android:textColor="?attr/font_color"
            tools:ignore="RtlHardcoded" />

        <!-- Edit Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/rounded_border_disable"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/email"
                android:contentDescription="@string/email_icon"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/edit_email"
                android:focusable="false"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:padding="8dp" />
        </LinearLayout>

        <!-- Edit Full Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname_label"
            android:textSize="18sp"
            android:textColor="?attr/font_color"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="32dp"
            android:layout_gravity="left"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/rounded_border_inline"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/person_name"
                android:contentDescription="@string/name_icon"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/edit_nama"
                android:inputType="textPersonName"
                android:background="@android:color/transparent"
                android:padding="8dp" />
        </LinearLayout>

        <!-- buttons -->
        <LinearLayout
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="24dp"
            android:paddingTop="24dp">

            <!-- finish -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_selesai"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/btn_selesai"
                android:icon="@drawable/ic_upload"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:cornerRadius="12dp"
                app:backgroundTint="?attr/colorPrimary"
                app:strokeWidth="2dp"
                app:strokeColor="?attr/colorOnPrimary"
                tools:ignore="NestedWeights" />

            <!-- Cancel -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/btn_cancel"
                android:textColor="?attr/colorError"
                app:cornerRadius="12dp"
                app:strokeWidth="2dp"
                app:strokeColor="?attr/colorError" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
