<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    >

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_variant"
        android:padding="16dp"
        tools:ignore="UselessParent">

        <!-- Tanggal -->
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_tgl"
            android:textSize="11sp"
            android:textColor="@color/Tersier"
            android:layout_marginBottom="8dp" />

        <!-- Row untuk ikon dan teks kalori -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UseCompoundDrawables">

            <!-- Ikon Kalori -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_fire"
                android:contentDescription="@string/kalori_logo"
                android:layout_marginEnd="8dp" />

            <!-- Teks Kalori -->
            <TextView
                android:id="@+id/tv_kalori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_kalori"
                android:textSize="24sp"
                android:textColor="?attr/font_color"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>