<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:textColor="?attr/font_color"
            android:background="@drawable/card_variant"
            android:padding="16dp"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                android:layout_marginEnd="8dp"
                app:cardUseCompatPadding="true">
                <ImageView
                    android:id="@+id/iv_photo_riwayat"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/dummy_makanan_name"
                    android:src="@drawable/sample_food"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name_riwayat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/font_color"
                    android:text="@string/dummy_makanan_name"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_date_riwayat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_tgl"
                    android:textSize="12sp"
                    android:textColor="@color/gray"
                    android:layout_marginBottom="4dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_fire"
                        android:contentDescription="@string/kalori_logo"
                        android:layout_marginEnd="8dp" />

                    <TextView
                        android:id="@+id/tv_total_cek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_kalori"
                        android:textSize="16sp"
                        android:textColor="?attr/colorPrimary"
                        android:fontFamily="sans-serif-medium" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_time_riwayat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_clock"
                android:textSize="12sp"
                android:layout_marginTop="-24dp"
                android:textColor="@color/gray" />
        </LinearLayout>
</LinearLayout>