<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    card_view:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:elevation="18dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_inline"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_title_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp"
            android:textColor="?attr/font_color"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_desc_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15sp"
            android:textColor="?attr/font_color"
            card_view:layout_constraintTop_toBottomOf="@id/tv_title_notification"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/tv_time_notification"/>

        <TextView
            android:id="@+id/tv_time_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            card_view:layout_constraintTop_toTopOf="@id/tv_desc_notification"
            card_view:layout_constraintStart_toEndOf="@+id/tv_desc_notification"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:gravity="end"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>